Improve importer safety and query reliability
- validate hash files, sort order, counts, and database directories
- open query databases in read-only mode
- add CLI help, range queries, and consistent exit codes
- improve demo validation and configuration
- add importer, query, and HTTP integration tests
- update CI and documentation